--- a/Prison Digital/nbproject/private/private.properties
+++ b/Prison Digital/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/Users/udayindukuri/Library/Application Support/NetBeans/12.0/build.properties
+user.properties.file=C:\\Users\\theja\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
