--- a/Prison Digital/nbproject/project.properties
+++ b/Prison Digital/nbproject/project.properties
@@ -50,8 +50,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=10
-javac.target=10
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -81,7 +81,7 @@ main.class=UI.MainJFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_17
+platform.active=Zulu_8.0.312_7
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
