--- a/Prison Digital/nbproject/project.properties
+++ b/Prison Digital/nbproject/project.properties
@@ -81,7 +81,7 @@ main.class=UI.MainJFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=Zulu_8.0.312_7
+platform.active=JDK_1.8
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
