--- a/Prison Digital/nbproject/private/private.properties
+++ b/Prison Digital/nbproject/private/private.properties
@@ -2,7 +2,7 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
-file.reference.jcalendar-1.4.jar=/Users/vikasshastry/Desktop/Info git 1/PrisonDigital/Prison Digital/jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar=/Users/vikasshastry/Desktop/Info git branch/PrisonDigital/Prison Digital/jcalendar-1.4.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
