--- a/Prison Digital/nbproject/private/private.properties
+++ b/Prison Digital/nbproject/private/private.properties
@@ -2,8 +2,8 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
-file.reference.jcalendar-1.4.jar=/Users/vikasshastry/Desktop/Info git branch/PrisonDigital/Prison Digital/jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar=/Users/udayindukuri/Downloads/PrisonDigital/Prison Digital/jcalendar-1.4.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\theja\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
+user.properties.file=/Users/udayindukuri/Library/Application Support/NetBeans/12.0/build.properties
