--- a/Prison Digital/nbproject/project.properties
+++ b/Prison Digital/nbproject/project.properties
@@ -35,13 +35,15 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/PrisonDigital
 endorsed.classpath=
 excludes=
+file.reference.AbsoluteLayout.jar=AbsoluteLayout.jar
 file.reference.db4o-8.0.184.15484-all-java5.jar=db4o-8.0.184.15484-all-java5.jar
 file.reference.jcalendar-1.4.jar=/Users/udayindukuri/Downloads/jcalendar-1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.db4o-8.0.184.15484-all-java5.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.AbsoluteLayout.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
